# NCursesPlus

./: .gitignore  CMakeLists.txt  README.md  ncursesplus_config.cmake  version_config.hpp.cmake
impl/: position.hpp  size.hpp  window.hpp
include/: application.hpp  position.hpp  size.hpp  window.hpp
src/: application.cpp  window.cpp
tests/: CMakeLists.txt  application.cpp
